--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -27,7 +27,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/new_password"
+        android:id="@+id/reset_email"
         android:text="Enter Your Mail to Reset Password"
         android:gravity="center_horizontal"
         android:layout_gravity="bottom"
