login, reset password, changed password, completed except button border

--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -46,6 +46,7 @@
                 android:drawableLeft="@drawable/name"
                 android:hint="Name"
                 android:textColor="#FFFFFF"
+                android:textColorHighlight="#FFFFFF"
                 android:textColorHint="#FFFFFF"
                 android:backgroundTint="#FFFFFF"
 
