--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -27,7 +27,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/reset_email"
+        android:id="@+id/upper_text"
         android:text="Enter Your Mail to Reset Password"
         android:gravity="center_horizontal"
         android:layout_gravity="bottom"
@@ -43,11 +43,16 @@
         android:layout_gravity="center_vertical"
         >
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="20dp"
             android:orientation="vertical"
+            android:layout_gravity="center"
             android:gravity="center_vertical"
 
 
@@ -57,10 +62,10 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/old_password"
+                android:id="@+id/reset_email"
                 android:hint="Email"
                 android:textColorHighlight="#FFFFFF"
-                android:inputType="textPassword"
+
                 android:drawableLeft="@drawable/email"
 
                 android:textColor="#FFFFFF"
@@ -69,6 +74,7 @@
                 />
 
         </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
     <LinearLayout
