--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:gravity="center"
     android:orientation="vertical" tools:context=".notification.MainActivity">
 
-    <TextView android:text="@string/registering_message" android:layout_width="wrap_content"
+    <TextView android:text="Generating GCM Registration Token..." android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/informationTextView"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ProgressBar
         android:layout_width="wrap_content"
+        android:layout_gravity="center"
+
         android:layout_height="wrap_content"
         android:id="@+id/registrationProgressBar" />
 
@@ -17,4 +20,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
