--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -28,10 +28,15 @@
         android:layout_gravity="center_vertical"
         >
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="20dp"
+            android:layout_gravity="center"
             android:orientation="vertical"
             android:gravity="center_vertical"
 
@@ -64,6 +69,7 @@
         android:backgroundTint="#FFFFFF"
         />
         </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
     <LinearLayout
