--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,7 @@
 
 
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -25,14 +26,20 @@
         android:layout_height="0dp"
         android:background="@drawable/text_holder"
         android:layout_weight="1"
-        android:layout_gravity="center_vertical"
+
         >
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:layout_gravity="center_vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="20dp"
             android:orientation="vertical"
+            android:layout_gravity="center"
             android:gravity="center_vertical"
 
 
@@ -69,6 +76,7 @@
 
 
         </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
     <LinearLayout
@@ -129,6 +137,7 @@
 
 
     </LinearLayout>
+
 
 
 </LinearLayout>
