--- a/app/src/main/res/layout/fragment_news_events.xml
+++ b/app/src/main/res/layout/fragment_news_events.xml
@@ -1,9 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".menu.MyBikeFragment"
-    tools:showIn="@layout/app_bar_main">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:orientation="vertical"
+
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -11,4 +10,4 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+</LinearLayout>
