Maps and working ability in emulator for google play service unavailability

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -16,6 +16,5 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyDCssLCz9P4bLkxnt5cmBgNEUReMROwGqQ
-    </string>
+        AIzaSyAnVipC3uJ0YTwGKw0c8l5ElaEPnRL4VWw</string>
 </resources>
