--- a/app/src/main/res/layout/fragment_my_bike.xml
+++ b/app/src/main/res/layout/fragment_my_bike.xml
@@ -8,7 +8,8 @@
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView">
+        android:id="@+id/listView"
+        android:layout_marginTop="20dp">
 
     </ListView>
 
