--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,14 @@
 
         android:layout_height="match_parent"
         android:layout_weight="1" >
+
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/pager"
+            >
+
+        </android.support.v4.view.ViewPager>
     </LinearLayout>
 
     <LinearLayout
