--- a/app/src/main/res/layout/item_pager_image.xml
+++ b/app/src/main/res/layout/item_pager_image.xml
@@ -6,9 +6,10 @@
 
 	<ImageView
 		android:id="@+id/image"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:layout_gravity="center"
+		android:scaleType="centerCrop"
 		android:adjustViewBounds="true"
 		android:contentDescription="Descr" />
 
