--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,10 @@
 
         android:layout_height="match_parent"
         android:layout_weight="1" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
 
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
@@ -19,7 +23,15 @@
             android:id="@+id/pager"
             >
 
+
         </android.support.v4.view.ViewPager>
+            <me.relex.circleindicator.CircleIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_height="48dp"/>
+        </RelativeLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -133,5 +145,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" >
+        <fragment
+            android:id="@+id/list"
+            android:name="www.icebd.com.suzukibangladesh.menu.BottomHomeFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+          />
+
     </LinearLayout>
 </LinearLayout>
