--- a/app/src/main/res/layout/fragment_bottom_home.xml
+++ b/app/src/main/res/layout/fragment_bottom_home.xml
@@ -1,22 +1,59 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
 >
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!--TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center|top"
 
         android:text=" Find Bike"
-      />
+      /-->
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/pager_bottom"
         >
         </android.support.v4.view.ViewPager>
+    <!--TextView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_alignTop="@+id/image"
+        android:layout_alignLeft="@+id/text_right"
+        android:gravity="left"
+        android:text="@string/fa_motorcycle"
+        android:id="@+id/text_left"
+        android:background="@drawable/text_holder"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" /-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_alignTop="@+id/pager_bottom"
+        android:gravity="center_horizontal"
+        android:text="Find Bike"
+        android:id="@+id/text_right"
+        android:background="@drawable/text_holder"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/text_right"
 
-</LinearLayout>
+        android:layout_alignBottom="@+id/image"
+
+        android:text="Bike Model"
+
+        android:gravity="left"
+
+
+        android:background="@drawable/text_holder"
+        android:id="@+id/txt_dropdown" />
+
+</RelativeLayout>
