--- a/app/src/main/res/layout/item_pager_image_bottom.xml
+++ b/app/src/main/res/layout/item_pager_image_bottom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:id="@+id/layout_image"
 	>
 
 	<ImageView
@@ -11,7 +12,17 @@
 		android:layout_gravity="center"
 		android:scaleType="centerCrop"
 		android:adjustViewBounds="true"
-		android:contentDescription="Descr" />
+		 />
+
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignTop="@+id/image"
+		android:layout_toRightOf="@+id/image"
+		android:gravity="center_vertical"
+		android:text="Find Bike"
+		android:textColor="@android:color/white"
+		android:textSize="16sp" />
 
 	<ProgressBar
 		android:id="@+id/loading"
@@ -20,4 +31,4 @@
 		android:layout_gravity="center"
 		android:visibility="gone" />
 
-</FrameLayout>
+</RelativeLayout>
