home and request service complete ..Alhamdulillah :)

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,8 @@
             <me.relex.circleindicator.CircleIndicator
                 android:id="@+id/indicator"
                 android:layout_width="match_parent"
-                android:gravity="center"
+                android:gravity="bottom"
+                android:layout_alignTop="@+id/pager"
                 android:layout_height="48dp"/>
         </RelativeLayout>
 
