--- a/app/src/main/res/layout/fragment_bottom_home.xml
+++ b/app/src/main/res/layout/fragment_bottom_home.xml
@@ -18,17 +18,18 @@
         android:id="@+id/pager_bottom"
         >
         </android.support.v4.view.ViewPager>
-    <!--TextView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:layout_alignTop="@+id/image"
+        android:layout_alignTop="@+id/pager_bottom"
         android:layout_alignLeft="@+id/text_right"
-        android:gravity="left"
+        android:paddingLeft="130dp"
         android:text="@string/fa_motorcycle"
         android:id="@+id/text_left"
+        android:gravity="center_vertical"
         android:background="@drawable/text_holder"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" /-->
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="25dp"
