--- a/app/src/main/res/layout/fragment_bottom_home.xml
+++ b/app/src/main/res/layout/fragment_bottom_home.xml
@@ -18,6 +18,13 @@
         android:id="@+id/pager_bottom"
         >
         </android.support.v4.view.ViewPager>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/text_holder"
+        android:id="@+id/text_holder_layout"
+        android:orientation="horizontal"
+        >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="25dp"
@@ -26,7 +33,9 @@
         android:paddingLeft="110dp"
         android:text="@string/fa_motorcycle"
         android:id="@+id/text_left"
-        android:gravity="center_vertical"
+        android:layout_weight="3"
+        android:layout_marginRight="10dp"
+        android:gravity="end"
         android:background="@drawable/text_holder"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
@@ -34,18 +43,20 @@
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:layout_alignTop="@+id/pager_bottom"
-        android:gravity="center_horizontal"
+        android:gravity="start"
         android:text="Find Bike"
+        android:layout_weight="2"
         android:id="@+id/text_right"
         android:background="@drawable/text_holder"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
+    </LinearLayout>
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/text_right"
+        android:layout_marginTop="35dp"
+
 
         android:layout_alignBottom="@+id/image"
 
