--- a/app/src/main/res/layout/fragment_news_events.xml
+++ b/app/src/main/res/layout/fragment_news_events.xml
@@ -8,6 +8,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:text="News and Events" />
 
 </LinearLayout>
