--- a/app/src/main/res/drawable/top_bottom_left_right_border.xml
+++ b/app/src/main/res/drawable/top_bottom_left_right_border.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/line_grey" />
+            <solid android:color="@color/black" />
         </shape>
     </item>
-    <item android:bottom="1dp" android:right="1dp">
+    <item android:top="3dp" android:bottom="3dp" android:left="3dp" android:right="3dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
         </shape>
