--- a/app/src/main/res/layout/fragment_news_events.xml
+++ b/app/src/main/res/layout/fragment_news_events.xml
@@ -7,9 +7,12 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="25sp"
         android:text="News and Events" />
 
 </LinearLayout>
