notification list.. news & event list completed

--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -13,14 +13,14 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:textSize="25sp"
-        android:text="News and Events" />
+        android:text="Notifications" />
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/list"
+        android:id="@+id/notif_list"
         >
 
 
