--- a/app/src/main/res/layout/fragment_bottom_home.xml
+++ b/app/src/main/res/layout/fragment_bottom_home.xml
@@ -21,7 +21,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/text_holder"
+        android:background="@color/home_mybike_bd_color"
         android:id="@+id/text_holder_layout"
         android:orientation="horizontal"
         >
@@ -66,7 +66,7 @@
 
 
 
-        android:background="@drawable/text_holder"
+        android:background="@color/home_mybike_bd_color"
         android:id="@+id/txt_dropdown" />
 
 </RelativeLayout>
