--- a/app/src/main/res/layout/fragment_bottom_home.xml
+++ b/app/src/main/res/layout/fragment_bottom_home.xml
@@ -21,7 +21,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/home_mybike_bd_color"
+        android:background="@color/home_mybike_bg_color"
         android:id="@+id/text_holder_layout"
         android:orientation="horizontal"
         >
@@ -36,9 +36,9 @@
         android:layout_weight="3"
         android:layout_marginRight="10dp"
         android:gravity="end"
-
         android:textColor="@android:color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="25dp"
@@ -52,21 +52,20 @@
         android:textSize="16sp" />
     </LinearLayout>
     <Spinner
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="35dp"
 
 
         android:layout_alignBottom="@+id/image"
 
-        android:text="Bike Model"
 
         android:gravity="left"
 
 
 
-        android:background="@color/home_mybike_bd_color"
+        android:background="@color/home_mybike_bg_color"
         android:id="@+id/txt_dropdown" />
 
 </RelativeLayout>
