--- a/app/src/main/res/layout/item_pager_image.xml
+++ b/app/src/main/res/layout/item_pager_image.xml
@@ -7,9 +7,10 @@
 	<ImageView
 		android:id="@+id/image"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="5dp"
 		android:layout_gravity="center"
-		android:scaleType="centerCrop"
+		android:scaleType="center"
 		android:adjustViewBounds="true"
 		android:contentDescription="Descr" />
 
