--- a/app/src/main/res/layout/item_pager_image_bottom.xml
+++ b/app/src/main/res/layout/item_pager_image_bottom.xml
@@ -10,7 +10,6 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_gravity="center"
-		android:scaleType="centerCrop"
 		android:adjustViewBounds="true"
 		 />
 
@@ -29,6 +28,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
+		android:layout_centerHorizontal="true"
 		android:visibility="gone" />
 
 </RelativeLayout>
