--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -24,6 +24,7 @@
                 android:layout_height="match_parent"
                 android:id="@+id/image_list"
                 android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
                 />
 
         </LinearLayout>
