--- a/app/src/main/res/layout/my_bikelist_row.xml
+++ b/app/src/main/res/layout/my_bikelist_row.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="210dp">
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="160dp"
     android:background="@drawable/bikelist_img_holder"
     android:orientation="vertical"
     android:gravity="center"
@@ -23,12 +23,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="20dp"
+        android:adjustViewBounds="true"/>
 
 </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:orientation="horizontal"
     android:background="@drawable/bikelist_text_holder"
     android:layout_weight="1">
