--- a/app/src/main/res/layout/my_spare_parts_list_row.xml
+++ b/app/src/main/res/layout/my_spare_parts_list_row.xml
@@ -18,7 +18,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="0dp"
-                android:background="@android:color/white"/>
+                android:background="@android:color/white"
+                android:adjustViewBounds="true"/>
             <ProgressBar
                 android:id="@+id/rn_progress"
                 style="?android:attr/progressBarStyleLarge"
@@ -33,7 +34,7 @@
                 android:layout_width="200dp"
                 android:layout_height="20dp"
                 android:layout_below="@+id/rn_progress"
-                android:background="@color/black"
+                android:background="@color/home_mybike_bg_color"
                 android:textStyle="bold"
                 android:textSize="16dp"
                 android:text="190 tk"
