--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:orientation="vertical"
-
+    android:id="@+id/parentLogin"
     android:background="@drawable/bg_user"
     >
 
@@ -31,7 +31,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:id="@+id/scrollviewLogin"
             android:layout_gravity="center_vertical">
 
         <LinearLayout
