--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,149 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-
-    android:background="@drawable/bg_user"
-   >
-
+    android:id="@+id/parentSignup"
+    android:background="@drawable/bg_user">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.5"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/s_logo"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/text_holder"
-        android:layout_weight="3"
-        >
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+    <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="20dp"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            android:layout_height="match_parent">
-
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/name"
-                android:textColorLink="#FFFFFF"
-                android:drawableLeft="@drawable/name"
-                android:hint="Name"
-                android:textColor="#FFFFFF"
-                android:textColorHighlight="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
+                android:layout_height="0dp"
+                android:layout_weight="1.5"
+                >
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/s_logo"/>
 
-                />
-            <EditText
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/email"
-                android:textColorLink="#FFFFFF"
-                android:drawableLeft="@drawable/email"
-                android:hint="Email"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
+                android:layout_height="0dp"
+                android:background="@drawable/text_holder"
+                android:layout_weight="3"
+                android:orientation="vertical">
+                <!--<ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">-->
 
-                />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="vertical"
 
-            <EditText
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/name"
+                        android:textColorLink="#FFFFFF"
+                        android:drawableLeft="@drawable/name"
+                        android:hint="Name"
+                        android:textColor="#FFFFFF"
+                        android:textColorHighlight="#FFFFFF"
+                        android:textColorHint="#FFFFFF"
+                        android:backgroundTint="#FFFFFF"
+
+                        />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/email"
+                        android:textColorLink="#FFFFFF"
+                        android:drawableLeft="@drawable/email"
+                        android:hint="Email"
+                        android:textColor="#FFFFFF"
+                        android:textColorHint="#FFFFFF"
+                        android:backgroundTint="#FFFFFF"
+
+                        />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/password"
+                        android:textColorLink="#FFFFFF"
+                        android:inputType="textPassword"
+                        android:drawableLeft="@drawable/pass"
+                        android:hint="Create Password"
+                        android:textColor="#FFFFFF"
+                        android:textColorHint="#FFFFFF"
+                        android:backgroundTint="#FFFFFF"
+
+                        />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/mobile_no"
+                        android:textColorLink="#FFFFFF"
+                        android:hint="Mobile Number"
+                        android:inputType="number"
+                        android:drawableLeft="@drawable/mobile"
+                        android:textColor="#FFFFFF"
+                        android:textColorHint="#FFFFFF"
+                        android:backgroundTint="#FFFFFF"
+
+                        />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/address"
+                        android:textColorLink="#FFFFFF"
+                        android:drawableLeft="@drawable/thana"
+                        android:hint="Address"
+                        android:textColor="#FFFFFF"
+                        android:textColorHint="#FFFFFF"
+                        android:backgroundTint="#FFFFFF"
+
+                        />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/thana"
+                        android:drawableLeft="@drawable/thana"
+                        android:hint="Thana"
+                        android:textColor="#FFFFFF"
+                        android:textColorHint="#FFFFFF"
+                        android:backgroundTint="#FFFFFF"
+
+                        />
+
+                </LinearLayout>
+                <!--</ScrollView>-->
+
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/password"
-                android:textColorLink="#FFFFFF"
-                android:inputType="textPassword"
-                android:drawableLeft="@drawable/pass"
-                android:hint="Create Password"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                >
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:text="Sign Up"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:id="@+id/button"
 
-                />
+                    android:background="#191919"
+                    android:textColor="#FFFFFF"
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/mobile_no"
-                android:textColorLink="#FFFFFF"
-                android:hint="Mobile Number"
-                android:inputType="number"
-                android:drawableLeft="@drawable/mobile"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
-
-                />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/address"
-                android:textColorLink="#FFFFFF"
-                android:drawableLeft="@drawable/thana"
-                android:hint="Address"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
-
-                />
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/thana"
-                android:drawableLeft="@drawable/thana"
-                android:hint="Thana"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
-
-                />
-
+                    />
+            </LinearLayout>
         </LinearLayout>
-        </ScrollView>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        >
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:text="Sign Up"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textSize="16sp"
-            android:id="@+id/button"
-
-            android:background="#191919"
-            android:textColor="#FFFFFF"
-
-           />
-
-
-
-    </LinearLayout>
-
+    </ScrollView>
 
 </LinearLayout>
