--- a/app/src/main/res/layout/fragment_bike_details.xml
+++ b/app/src/main/res/layout/fragment_bike_details.xml
@@ -2,9 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    >
+    android:layout_height="match_parent">
 
 
 
@@ -13,8 +11,6 @@
         android:layout_height="match_parent"
         android:id="@+id/main_table"
         android:stretchColumns="1">
-
-
 
         <TableRow
             android:layout_width="match_parent"
