--- a/app/src/main/res/layout/fragment_bike_details.xml
+++ b/app/src/main/res/layout/fragment_bike_details.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent">
 
 
-
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +14,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:weightSum="8.5"
-            android:background="#d8d8d8"
+            android:background="@color/white"
             >
             <TableLayout
                 android:layout_width="match_parent"
@@ -47,8 +46,7 @@
 
             <RelativeLayout
                 android:layout_height="130dp"
-                android:gravity="bottom|center"
-                android:layout_weight="6">
+                android:gravity="bottom|center">
 
 
                 <android.support.v4.view.ViewPager
