--- a/app/src/main/res/drawable/rounded_pay_method_btn.xml
+++ b/app/src/main/res/drawable/rounded_pay_method_btn.xml
@@ -2,6 +2,6 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" android:padding="10dp">
-	 <solid android:color="#517BFF"/>
+	 <solid android:color="@color/suzuki_blue_color"/>
 	 <corners android:radius="5dp" />
 </shape>
